objects/LLC_BI__Product_Catalog_Section_Configuration__c.object
<CustomObject>
    <description>Provides a template for a section configuration used within a Product Catalog Route template.</description>
    <fields>
        <fullName>LLC_BI__Display_Order__c</fullName>
        <description>A sorting key of this section configuration compared to others in its same screen section.</description>
        <inlineHelpText>What is the sorting order key for this screen section configuration?</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Set__c</fullName>
        <description>Stores which field set is used for a given section configuration</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Which field set is associated with this section configuration?</inlineHelpText>
        <label>Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Layout__c</fullName>
        <description>Defines the layout to be used for a section configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What layout will be used for this section configuration template?</inlineHelpText>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Catalog_Route_Template__c</fullName>
        <description>Maps this section configuration template to its parent route template record.</description>
        <inlineHelpText>Which product catalog route template is this section configuration template associated with?</inlineHelpText>
        <label>Product Catalog Route Template</label>
        <referenceTo>LLC_BI__Product_Catalog_Route_Template__c</referenceTo>
        <relationshipLabel>Product Catalog Section Configurations</relationshipLabel>
        <relationshipName>Product_Catalog_Section_Configurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SObject_Type__c</fullName>
        <description>Stores the name of the sObject associated with this section configuration.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>What sObject type is tied to this section configuration?</inlineHelpText>
        <label>SObject Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Catalog Section Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Section Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Catalog Section Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>